== Changelog

The commit log is available at https://github.com/mosabua/ksoap2-android/commits/

=== 3.6.4 Release, Upcoming

* upgrade to okhttp 3.12.1
** see https://github.com/simpligility/ksoap2-android/pull/127
** contributed by Isaac Pateau https://github.com/zaclimon and Manfred Moser http://www.simpligility.com
* updated Maven wrapper


=== 3.6.3 Release, 2018-11-26

* Differentiating read and connection timeout
** see https://github.com/simpligility/ksoap2-android/pull/124
* Added in okhttp support module into release
** see https://github.com/simpligility/ksoap2-android/pull/121
** contributed by https://github.com/canyapan
* Removed dep mgt

=== 3.6.2 Release, 2016-10-08

* Accept 202 http status code
** see https://github.com/simpligility/ksoap2-android/pull/102
** contributed by https://github.com/robocik, Quasar Development from http://easywsdl.com
* Allow to specify an existing OkHttpClient instance for transport
** see https://github.com/simpligility/ksoap2-android/pull/99
** contributed by https://github.com/rob-X1
* Changed site publishing to use scm-publish
** contributed by Manfred Moser http://www.simpligility.com

=== 3.6.1 Release, 2016-05-24

* New transport and connection classes using OKHttp
** see https://github.com/simpligility/ksoap2-android/pull/83
** contributed by Nicola Beghin https://github.com/nicolabeghin
* Updated junit and maven plugin versions

Release performed by Manfred Moser http://www.simpligility.com

=== 3.6.0 Release, 2015-10-15

* Added extensions which allows to customize soap message
** see https://github.com/simpligility/ksoap2-android/pull/74
** contributed by https://github.com/robocik, Quasar Development from http://easywsdl.com
** minor API incompatibility triggered minor version update to 3.6.0

Release performed by Manfred Moser http://www.simpligility.com

=== 3.5.0 Release, 2015-09-09

* Updated Java language level to 1.5